--- a/CSS/sass/partials/_header.scss
+++ b/CSS/sass/partials/_header.scss
@@ -5,7 +5,10 @@ nav {
       list-style: none;
     }
   
-    li { display: inline-block; }
+    li { 
+      display: inline-block; 
+      padding: 20px;
+    }
   
     a {
       display: block;
@@ -13,3 +16,11 @@ nav {
       text-decoration: none;
     }
   }
+  .navbar {
+    color: red;
+    text-transform: uppercase;
+}
+
+.navbar-brand{
+  padding-left: 60px;
+}
