--- a/CSS/sass/style.css
+++ b/CSS/sass/style.css
@@ -6,11 +6,34 @@ nav ul {
 
 nav li {
   display: inline-block;
+  padding: 20px;
 }
 
 nav a {
   display: block;
   padding: 6px 12px;
   text-decoration: none;
+}
+
+.navbar {
+  color: red;
+  text-transform: uppercase;
+}
+
+.navbar-brand {
+  padding-left: 60px;
+}
+
+body {
+  text-align: center;
+  background-color: #c7c7c7;
+}
+
+.row {
+  padding: 20px;
+}
+
+.card-img-top {
+  background-repeat: no-repeat;
 }
 /*# sourceMappingURL=style.css.map */
